# asenix

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PYTHON_MCP_TESTS_UPDATE.md  README.md  STATE.md  VALIDATION_SUMMARY.md  config.example.toml  config.toml  docker-compose.test.yml  docker-compose.yml  generate_test_signature.py  install.sh  run_tests.py  test_report.json
agent-docs/: API.md  ARTIFACTS.md  DEPLOYMENT.md  DEVELOPMENT.md  INDEX.md  MANIFESTO.md  MCP.md  PYTHON_MCP_TESTS_FIX_REPORT.md  README.md  RECENT_FIXES.md  ROADMAP.md  STATE.md  TESTING.md
agents/: README.md  organizer_agent.py
asenix-ui/: .cta.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
asenix_client/: README.md  asenix_mcp_client.py
demo/: .agent2_config  .gitignore  .mcp.json  CLAUDE.md  README.md  reset.sh  run_agent.sh  setup.sh  synthesis_agent.py  train.py  visualize.py  visualize_graph.py
docs/: book.toml
migrations/: 001_initial_schema.sql  002_add_artifacts.sql  002_add_review_queue.sql  003_update_embedding_dimension.sql  004_add_api_token.sql  006_add_cifar10_resnet_conditions.sql  007_add_last_activity_at.sql  008_add_projects.sql  009_add_project_layer.sql  010_update_embedding_to_hybrid_dimension.sql  011_mcp_tool_interface.sql  012_metrics_snapshots.sql  013_fix_lifecycle_constraint.sql  014_frontier_diversity_jsonb.sql
mote_client/: README.md
scripts/: recompute_pheromones.py  setup-test-db.sh  test-hardening.sh
src/: acceptance.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
(+205 files in other folders)
