[package]
name = "mote"
version = "0.1.0"
edition = "2021"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[dependencies]
# Async runtime and HTTP
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
bytes = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "bigdecimal"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# URL parsing
url = "2.5"

# Cryptography
ed25519-dalek = "2.0"
blake3 = "1.5"
hex = "0.4"
rand = "0.9"

# Configuration
toml = "0.8"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Graph data structures
petgraph = "0.6"

# Broadcasting
async-stream = "0.3"
futures = "0.3"

# Error handling
thiserror = "1.0"
async-trait = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13.2", features = ["json"] }

# Embeddings
fastembed = "4"

[dev-dependencies]
# Test dependencies
tower = { version = "0.4", features = ["util"] }
axum-macros = "0.4"
tempfile = "3.0"
